@@ -174,10 +174,10 @@ public class MapTableModel extends AbstractTableModel {
 			for (Map<String, Object> aStoreMap : storeData) {
 				aStoreMap.put(key, defaultValues);
 			}
-			configChanges = Collections.singletonMap(key, defaultValues);
+			configChanges = Map.of(key, defaultValues);
 		}
 
-		updateCollection.addMap(new HashMap<>(configChanges));
+		updateCollection.addMap(configChanges);
 
 		notifyChange();
 		fireTableDataChanged();
@@ -296,13 +296,13 @@ public class MapTableModel extends AbstractTableModel {
 			for (Map<String, Object> aStoreMap : storeData) {
 				aStoreMap.remove(key);
 			}
-			configChanges = Collections.singletonMap(key, null);
+			configChanges = Map.of(key, null);
 		}
 
 		notifyChange();
 		fireTableDataChanged();
 
-		updateCollection.addMap(new HashMap<>(configChanges));
+		updateCollection.addMap(configChanges);
 	}
 
 	private void weHaveChangedStoredMaps() {
@@ -318,7 +318,7 @@ public class MapTableModel extends AbstractTableModel {
 			if (updateCollection == null) {
 				Logging.debug(this, "updateCollection null - should not be");
 			} else {
-				updateCollection.addMap(new HashMap<>(changes));
+				updateCollection.addMap(changes);
 			}
 
 			Logging.debug(this, " ---  updateCollection: ", updateCollection, "  has size ", updateCollection.size());
